<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".view.fragments.SubmitFragment">


    <!--    <ImageView-->
    <!--        android:id="@+id/imgBack"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="8dp"-->
    <!--        android:layout_marginLeft="8dp"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:src="@drawable/abc_vector_test"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <!--    <ImageView-->
    <!--        android:id="@+id/imageView2"-->
    <!--        android:layout_width="250dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:src="@drawable/ic_gads_2"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/imgBack"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/text_proj"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="48dp"-->
    <!--        android:text="Project Submission"-->
    <!--        android:textColor="#FF9800"-->
    <!--        android:textSize="18sp"-->
    <!--        android:textStyle="bold"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/imageView2" />-->

    <!--    <View-->
    <!--        android:id="@+id/view"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="1dp"-->
    <!--        android:layout_marginStart="140dp"-->
    <!--        android:layout_marginLeft="140dp"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        android:layout_marginEnd="140dp"-->
    <!--        android:layout_marginRight="140dp"-->
    <!--        android:background="#FFC107"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/text_proj" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/editText_Fullname"-->
    <!--        android:layout_width="180dp"-->
    <!--        android:layout_height="57dp"-->
    <!--        android:layout_marginStart="16dp"-->
    <!--        android:layout_marginLeft="16dp"-->
    <!--        android:layout_marginTop="80dp"-->
    <!--        android:layout_marginEnd="4dp"-->
    <!--        android:layout_marginRight="4dp"-->
    <!--        android:background="#fff"-->
    <!--        android:ems="10"-->
    <!--        android:inputType="textPersonName"-->
    <!--        android:text="First Name"-->
    <!--        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName2"-->
    <!--        app:layout_constraintHorizontal_bias="0.5"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/view" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/editTextTextPersonName2"-->
    <!--        android:layout_width="182dp"-->
    <!--        android:layout_height="55dp"-->
    <!--        android:layout_marginStart="4dp"-->
    <!--        android:layout_marginLeft="4dp"-->
    <!--        android:layout_marginEnd="16dp"-->
    <!--        android:layout_marginRight="16dp"-->
    <!--        android:background="#fff"-->
    <!--        android:ems="10"-->
    <!--        android:inputType="textPersonName"-->
    <!--        android:text="Last Name"-->
    <!--        app:layout_constraintBottom_toBottomOf="@+id/editText_Fullname"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/editText_Fullname"-->
    <!--        app:layout_constraintTop_toTopOf="@+id/editText_Fullname" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/editText_email"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="50dp"-->
    <!--        android:layout_marginStart="16dp"-->
    <!--        android:layout_marginLeft="16dp"-->
    <!--        android:layout_marginTop="24dp"-->
    <!--        android:layout_marginEnd="16dp"-->
    <!--        android:layout_marginRight="16dp"-->
    <!--        android:background="#fff"-->
    <!--        android:ems="10"-->
    <!--        android:inputType="textPersonName"-->
    <!--        android:text="Email Address"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/editText_Fullname" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/editText_gitlink"-->
    <!--        android:layout_width="379dp"-->
    <!--        android:layout_height="55dp"-->
    <!--        android:layout_marginStart="16dp"-->
    <!--        android:layout_marginLeft="16dp"-->
    <!--        android:layout_marginTop="24dp"-->
    <!--        android:layout_marginEnd="16dp"-->
    <!--        android:layout_marginRight="16dp"-->
    <!--        android:background="#fff"-->
    <!--        android:ems="10"-->
    <!--        android:inputType="textPersonName"-->
    <!--        android:text="Project on Github(Link)"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/editText_email" />-->

    <!--    <com.google.android.material.button.MaterialButton-->
    <!--        android:id="@+id/btn_submit"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="72dp"-->
    <!--        android:backgroundTint="#FFC107"-->
    <!--        android:text="Submit"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.498"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/editText_gitlink" />-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/project_submission"
            android:textColor="@color/colorYellow"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/etFname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="88dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/edit_text_bck"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/etLname"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/etLname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="88dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/edit_text_bck"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:textStyle=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/etFname"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edit_text_bck"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etFname" />

        <EditText
            android:id="@+id/etProject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edit_text_bck"
            android:hint="@string/project_on_github_link"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmail" />

        <ProgressBar
            android:id="@+id/submitProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="200dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.62" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            android:layout_width="104dp"
            android:layout_height="58dp"
            android:layout_marginTop="84dp"
            android:layout_marginBottom="24dp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="#FF9800"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etProject" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/views"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="btnSubmit, etFname, etLname, etEmail, etProject" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>